--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,22 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
     hooks:
-    - id: isort
-      additional_dependencies: [toml]
-      exclude: migrations/, donotuse/
-  - repo: https://github.com/myint/docformatter
-    rev: v1.4
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+-   repo: https://github.com/psf/black
+    rev: 22.3.0
     hooks:
-      - id: docformatter
-        args: ['--in-place', '--pre-summary-newline', '--make-summary-multi-line']
-        exclude: migrations/, donotuse/
-  - repo: https://github.com/ambv/black
-    rev: 22.1.0
-    hooks:
-    - id: black
-      language_version: python3.8
-      exclude: migrations/, donotuse/
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-      - id: flake8
-        args: ['--config=.flake8', '--max-line-length=90']
+    -   id: black
         language_version: python3.8
-        exclude: migrations/, donotuse/
+-   repo: https://github.com/pycqa/isort
+    rev: 5.11.5
+    hooks:
+    -   id: isort
+        name: isort (python)
+-   repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
+    hooks:
+    -   id: flake8
