--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -50,8 +50,8 @@ jobs:
     - name: Publish package to PyPI
       if: success() && github.ref == 'refs/heads/master'
       env:
-        PYPI_USERNAME: ${{ secrets.PYPI_USER }}
-        PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
         twine upload --skip-existing dist/*  # Upload the package to PyPI
         echo "Successfully uploaded package version ${{ env.PACKAGE_VERSION }} to PyPI"
